--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,8 @@
     "@nestjs/testing": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3",
-    "prisma": "^5.4.0"
+    "prisma": "^5.4.0",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.7"
   }
 }
