--- a/backend/package.json
+++ b/backend/package.json
@@ -3,45 +3,51 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "build": "nest build",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "prisma db seed",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.588.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
-    "@prisma/client": "^5.4.0",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
+    "@nestjs/throttler": "^6.0.0",
+    "@prisma/client": "^5.22.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "@nestjs/passport": "^10.0.0",
-    "passport": "^0.6.0",
-    "@nestjs/throttler": "^6.0.0",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "@aws-sdk/client-s3": "^3.588.0",
-    "passport-jwt": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-linkedin-oauth2": "^2.0.0"
+    "passport-jwt": "^4.0.1",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.3",
-    "prisma": "^5.4.0",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "@types/node": "^24.3.0",
+    "prisma": "^5.22.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
