--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
-    "axios": "^1.6.2",
-    "recharts": "^2.12.7",
-    "react-quill": "^2.0.0"
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -23,6 +23,6 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.0"
+    "vite": "^5.4.19"
   }
 }
