--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
