--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "prisma:seed": "prisma db seed",
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "test": "echo \"No tests configured\""
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.588.0",
